test/tests/stages/18_structures/invalid_parse/extra_credit/union_member_no_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[7]:
  union
  identifier(u)
  {
  int
  ;
  }
  ;
